[package]
name = "kashan786_cli_app"
version = "0.1.0"
authors = ["Kashan Khan"]
edition = "2021"
description = "A command-line utility for various file operations."
license = "MIT"
homepage = "https://github.com/khanka786/cli_app"
repository = "https://github.com/khanka786/cli_app"

[dependencies]
clap = "4.1"
chrono = "0.4"  
zip = "0.6"
walkdir = "2.3"